seaqt/QtWidgets/gen_qwizard.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
typedef struct QWizard QWizard;
typedef struct QWizardPage QWizardPage;
typedef struct VirtualQWizard VirtualQWizard;
typedef struct QWizard_VTable{
	void (*destructor)(VirtualQWizard* self);
	QMetaObject* (*metaObject)(const VirtualQWizard* self);
	void* (*metacast)(VirtualQWizard* self, const char* param1);
	int (*metacall)(VirtualQWizard* self, int param1, int param2, void** param3);
	bool (*validateCurrentPage)(VirtualQWizard* self);
	int (*nextId)(const VirtualQWizard* self);
	void (*setVisible)(VirtualQWizard* self, bool visible);
	QSize* (*sizeHint)(const VirtualQWizard* self);
	bool (*event)(VirtualQWizard* self, QEvent* event);
	void (*resizeEvent)(VirtualQWizard* self, QResizeEvent* event);
	void (*paintEvent)(VirtualQWizard* self, QPaintEvent* event);
	void (*done)(VirtualQWizard* self, int result);
	void (*initializePage)(VirtualQWizard* self, int id);
	void (*cleanupPage)(VirtualQWizard* self, int id);
	QSize* (*minimumSizeHint)(const VirtualQWizard* self);
	void (*open)(VirtualQWizard* self);
	int (*exec)(VirtualQWizard* self);
	void (*accept)(VirtualQWizard* self);
	void (*reject)(VirtualQWizard* self);
	void (*keyPressEvent)(VirtualQWizard* self, QKeyEvent* param1);
	void (*closeEvent)(VirtualQWizard* self, QCloseEvent* param1);
	void (*showEvent)(VirtualQWizard* self, QShowEvent* param1);
	void (*contextMenuEvent)(VirtualQWizard* self, QContextMenuEvent* param1);
	bool (*eventFilter)(VirtualQWizard* self, QObject* param1, QEvent* param2);
	int (*devType)(const VirtualQWizard* self);
	int (*heightForWidth)(const VirtualQWizard* self, int param1);
	bool (*hasHeightForWidth)(const VirtualQWizard* self);
	QPaintEngine* (*paintEngine)(const VirtualQWizard* self);
	void (*mousePressEvent)(VirtualQWizard* self, QMouseEvent* event);
	void (*mouseReleaseEvent)(VirtualQWizard* self, QMouseEvent* event);
	void (*mouseDoubleClickEvent)(VirtualQWizard* self, QMouseEvent* event);
	void (*mouseMoveEvent)(VirtualQWizard* self, QMouseEvent* event);
	void (*wheelEvent)(VirtualQWizard* self, QWheelEvent* event);
	void (*keyReleaseEvent)(VirtualQWizard* self, QKeyEvent* event);
	void (*focusInEvent)(VirtualQWizard* self, QFocusEvent* event);
	void (*focusOutEvent)(VirtualQWizard* self, QFocusEvent* event);
	void (*enterEvent)(VirtualQWizard* self, QEnterEvent* event);
	void (*leaveEvent)(VirtualQWizard* self, QEvent* event);
	void (*moveEvent)(VirtualQWizard* self, QMoveEvent* event);
	void (*tabletEvent)(VirtualQWizard* self, QTabletEvent* event);
	void (*actionEvent)(VirtualQWizard* self, QActionEvent* event);
	void (*dragEnterEvent)(VirtualQWizard* self, QDragEnterEvent* event);
	void (*dragMoveEvent)(VirtualQWizard* self, QDragMoveEvent* event);
	void (*dragLeaveEvent)(VirtualQWizard* self, QDragLeaveEvent* event);
	void (*dropEvent)(VirtualQWizard* self, QDropEvent* event);
	void (*hideEvent)(VirtualQWizard* self, QHideEvent* event);
	bool (*nativeEvent)(VirtualQWizard* self, struct miqt_string eventType, void* message, intptr_t* result);
	void (*changeEvent)(VirtualQWizard* self, QEvent* param1);
	int (*metric)(const VirtualQWizard* self, int param1);
	void (*initPainter)(const VirtualQWizard* self, QPainter* painter);
	QPaintDevice* (*redirected)(const VirtualQWizard* self, QPoint* offset);
	QPainter* (*sharedPainter)(const VirtualQWizard* self);
	void (*inputMethodEvent)(VirtualQWizard* self, QInputMethodEvent* param1);
	QVariant* (*inputMethodQuery)(const VirtualQWizard* self, int param1);
	bool (*focusNextPrevChild)(VirtualQWizard* self, bool next);
	void (*timerEvent)(VirtualQWizard* self, QTimerEvent* event);
	void (*childEvent)(VirtualQWizard* self, QChildEvent* event);
	void (*customEvent)(VirtualQWizard* self, QEvent* event);
	void (*connectNotify)(VirtualQWizard* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQWizard* self, QMetaMethod* signal);
}QWizard_VTable;
VirtualQWizard* QWizard_new(const QWizard_VTable* vtbl, size_t vdata, QWidget* parent);
VirtualQWizard* QWizard_new2(const QWizard_VTable* vtbl, size_t vdata);
VirtualQWizard* QWizard_new3(const QWizard_VTable* vtbl, size_t vdata, QWidget* parent, int flags);
void QWizard_connect_currentIdChanged(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_connect_helpRequested(QWizard* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QWizard_connect_customButtonClicked(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_connect_pageAdded(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_connect_pageRemoved(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
int QWizard_virtualbase_metacall(VirtualQWizard* self, int param1, int param2, void** param3);
bool QWizard_virtualbase_validateCurrentPage(VirtualQWizard* self);
int QWizard_virtualbase_nextId(const VirtualQWizard* self);
void QWizard_virtualbase_setVisible(VirtualQWizard* self, bool visible);
QSize* QWizard_virtualbase_sizeHint(const VirtualQWizard* self);
bool QWizard_virtualbase_event(VirtualQWizard* self, QEvent* event);
void QWizard_virtualbase_resizeEvent(VirtualQWizard* self, QResizeEvent* event);
void QWizard_virtualbase_paintEvent(VirtualQWizard* self, QPaintEvent* event);
void QWizard_virtualbase_done(VirtualQWizard* self, int result);
void QWizard_virtualbase_initializePage(VirtualQWizard* self, int id);
void QWizard_virtualbase_cleanupPage(VirtualQWizard* self, int id);
QSize* QWizard_virtualbase_minimumSizeHint(const VirtualQWizard* self);
void QWizard_virtualbase_open(VirtualQWizard* self);
int QWizard_virtualbase_exec(VirtualQWizard* self);
void QWizard_virtualbase_accept(VirtualQWizard* self);
void QWizard_virtualbase_reject(VirtualQWizard* self);
void QWizard_virtualbase_keyPressEvent(VirtualQWizard* self, QKeyEvent* param1);
void QWizard_virtualbase_closeEvent(VirtualQWizard* self, QCloseEvent* param1);
void QWizard_virtualbase_showEvent(VirtualQWizard* self, QShowEvent* param1);
void QWizard_virtualbase_contextMenuEvent(VirtualQWizard* self, QContextMenuEvent* param1);
bool QWizard_virtualbase_eventFilter(VirtualQWizard* self, QObject* param1, QEvent* param2);
int QWizard_virtualbase_devType(const VirtualQWizard* self);
int QWizard_virtualbase_heightForWidth(const VirtualQWizard* self, int param1);
bool QWizard_virtualbase_hasHeightForWidth(const VirtualQWizard* self);
QPaintEngine* QWizard_virtualbase_paintEngine(const VirtualQWizard* self);
void QWizard_virtualbase_mousePressEvent(VirtualQWizard* self, QMouseEvent* event);
void QWizard_virtualbase_mouseReleaseEvent(VirtualQWizard* self, QMouseEvent* event);
void QWizard_virtualbase_mouseDoubleClickEvent(VirtualQWizard* self, QMouseEvent* event);
void QWizard_virtualbase_mouseMoveEvent(VirtualQWizard* self, QMouseEvent* event);
void QWizard_virtualbase_wheelEvent(VirtualQWizard* self, QWheelEvent* event);
void QWizard_virtualbase_keyReleaseEvent(VirtualQWizard* self, QKeyEvent* event);
void QWizard_virtualbase_focusInEvent(VirtualQWizard* self, QFocusEvent* event);
void QWizard_virtualbase_focusOutEvent(VirtualQWizard* self, QFocusEvent* event);
void QWizard_virtualbase_enterEvent(VirtualQWizard* self, QEnterEvent* event);
void QWizard_virtualbase_leaveEvent(VirtualQWizard* self, QEvent* event);
void QWizard_virtualbase_moveEvent(VirtualQWizard* self, QMoveEvent* event);
void QWizard_virtualbase_tabletEvent(VirtualQWizard* self, QTabletEvent* event);
void QWizard_virtualbase_actionEvent(VirtualQWizard* self, QActionEvent* event);
void QWizard_virtualbase_dragEnterEvent(VirtualQWizard* self, QDragEnterEvent* event);
void QWizard_virtualbase_dragMoveEvent(VirtualQWizard* self, QDragMoveEvent* event);
void QWizard_virtualbase_dragLeaveEvent(VirtualQWizard* self, QDragLeaveEvent* event);
void QWizard_virtualbase_dropEvent(VirtualQWizard* self, QDropEvent* event);
void QWizard_virtualbase_hideEvent(VirtualQWizard* self, QHideEvent* event);
bool QWizard_virtualbase_nativeEvent(VirtualQWizard* self, struct miqt_string eventType, void* message, intptr_t* result);
void QWizard_virtualbase_changeEvent(VirtualQWizard* self, QEvent* param1);
int QWizard_virtualbase_metric(const VirtualQWizard* self, int param1);
void QWizard_virtualbase_initPainter(const VirtualQWizard* self, QPainter* painter);
QPaintDevice* QWizard_virtualbase_redirected(const VirtualQWizard* self, QPoint* offset);
QPainter* QWizard_virtualbase_sharedPainter(const VirtualQWizard* self);
void QWizard_virtualbase_inputMethodEvent(VirtualQWizard* self, QInputMethodEvent* param1);
QVariant* QWizard_virtualbase_inputMethodQuery(const VirtualQWizard* self, int param1);
bool QWizard_virtualbase_focusNextPrevChild(VirtualQWizard* self, bool next);
void QWizard_virtualbase_timerEvent(VirtualQWizard* self, QTimerEvent* event);
void QWizard_virtualbase_childEvent(VirtualQWizard* self, QChildEvent* event);
void QWizard_virtualbase_customEvent(VirtualQWizard* self, QEvent* event);
void QWizard_virtualbase_connectNotify(VirtualQWizard* self, QMetaMethod* signal);
void QWizard_virtualbase_disconnectNotify(VirtualQWizard* self, QMetaMethod* signal);
void QWizard_protectedbase_adjustPosition(VirtualQWizard* self, QWidget* param1);
void QWizard_protectedbase_updateMicroFocus(VirtualQWizard* self);
void QWizard_protectedbase_create(VirtualQWizard* self);
void QWizard_protectedbase_destroy(VirtualQWizard* self);
bool QWizard_protectedbase_focusNextChild(VirtualQWizard* self);
bool QWizard_protectedbase_focusPreviousChild(VirtualQWizard* self);
QObject* QWizard_protectedbase_sender(const VirtualQWizard* self);
int QWizard_protectedbase_senderSignalIndex(const VirtualQWizard* self);
int QWizard_protectedbase_receivers(const VirtualQWizard* self, const char* signal);
bool QWizard_protectedbase_isSignalConnected(const VirtualQWizard* self, QMetaMethod* signal);
const QMetaObject* QWizard_staticMetaObject();
QMetaObject* QWizardPage_metaObject(const QWizardPage* self);
void* QWizardPage_metacast(QWizardPage* self, const char* param1);
int QWizardPage_metacall(QWizardPage* self, int param1, int param2, void** param3);
struct miqt_string QWizardPage_tr(const char* s);
void QWizardPage_setTitle(QWizardPage* self, struct miqt_string title);
struct miqt_string QWizardPage_title(const QWizardPage* self);
void QWizardPage_setSubTitle(QWizardPage* self, struct miqt_string subTitle);
struct miqt_string QWizardPage_subTitle(const QWizardPage* self);
void QWizardPage_setPixmap(QWizardPage* self, int which, QPixmap* pixmap);
QPixmap* QWizardPage_pixmap(const QWizardPage* self, int which);
void QWizardPage_setFinalPage(QWizardPage* self, bool finalPage);
bool QWizardPage_isFinalPage(const QWizardPage* self);
void QWizardPage_setCommitPage(QWizardPage* self, bool commitPage);
bool QWizardPage_isCommitPage(const QWizardPage* self);
void QWizardPage_setButtonText(QWizardPage* self, int which, struct miqt_string text);
struct miqt_string QWizardPage_buttonText(const QWizardPage* self, int which);
void QWizardPage_initializePage(QWizardPage* self);
void QWizardPage_cleanupPage(QWizardPage* self);
bool QWizardPage_validatePage(QWizardPage* self);
bool QWizardPage_isComplete(const QWizardPage* self);
int QWizardPage_nextId(const QWizardPage* self);
void QWizardPage_completeChanged(QWizardPage* self);
void QWizardPage_connect_completeChanged(QWizardPage* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
struct miqt_string QWizardPage_tr2(const char* s, const char* c);
struct miqt_string QWizardPage_tr3(const char* s, const char* c, int n);