seaqt/QtWidgets/gen_qwizard.nim

proc fcQWizard_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWizard_virtualbase_metacall".}
proc fcQWizard_virtualbase_validateCurrentPage(self: pointer, ): bool {.importc: "QWizard_virtualbase_validateCurrentPage".}
proc fcQWizard_virtualbase_nextId(self: pointer, ): cint {.importc: "QWizard_virtualbase_nextId".}
proc fcQWizard_virtualbase_setVisible(self: pointer, visible: bool): void {.importc: "QWizard_virtualbase_setVisible".}
proc fcQWizard_virtualbase_sizeHint(self: pointer, ): pointer {.importc: "QWizard_virtualbase_sizeHint".}
proc fcQWizard_virtualbase_event(self: pointer, event: pointer): bool {.importc: "QWizard_virtualbase_event".}
proc fcQWizard_virtualbase_resizeEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_resizeEvent".}
proc fcQWizard_virtualbase_paintEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_paintEvent".}
proc fcQWizard_virtualbase_done(self: pointer, resultVal: cint): void {.importc: "QWizard_virtualbase_done".}
proc fcQWizard_virtualbase_initializePage(self: pointer, id: cint): void {.importc: "QWizard_virtualbase_initializePage".}
proc fcQWizard_virtualbase_cleanupPage(self: pointer, id: cint): void {.importc: "QWizard_virtualbase_cleanupPage".}
proc fcQWizard_virtualbase_minimumSizeHint(self: pointer, ): pointer {.importc: "QWizard_virtualbase_minimumSizeHint".}
proc fcQWizard_virtualbase_open(self: pointer, ): void {.importc: "QWizard_virtualbase_open".}
proc fcQWizard_virtualbase_exec(self: pointer, ): cint {.importc: "QWizard_virtualbase_exec".}
proc fcQWizard_virtualbase_accept(self: pointer, ): void {.importc: "QWizard_virtualbase_accept".}
proc fcQWizard_virtualbase_reject(self: pointer, ): void {.importc: "QWizard_virtualbase_reject".}
proc fcQWizard_virtualbase_keyPressEvent(self: pointer, param1: pointer): void {.importc: "QWizard_virtualbase_keyPressEvent".}
proc fcQWizard_virtualbase_closeEvent(self: pointer, param1: pointer): void {.importc: "QWizard_virtualbase_closeEvent".}
proc fcQWizard_virtualbase_showEvent(self: pointer, param1: pointer): void {.importc: "QWizard_virtualbase_showEvent".}
proc fcQWizard_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void {.importc: "QWizard_virtualbase_contextMenuEvent".}
proc fcQWizard_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool {.importc: "QWizard_virtualbase_eventFilter".}
proc fcQWizard_virtualbase_devType(self: pointer, ): cint {.importc: "QWizard_virtualbase_devType".}
proc fcQWizard_virtualbase_heightForWidth(self: pointer, param1: cint): cint {.importc: "QWizard_virtualbase_heightForWidth".}
proc fcQWizard_virtualbase_hasHeightForWidth(self: pointer, ): bool {.importc: "QWizard_virtualbase_hasHeightForWidth".}
proc fcQWizard_virtualbase_paintEngine(self: pointer, ): pointer {.importc: "QWizard_virtualbase_paintEngine".}
proc fcQWizard_virtualbase_mousePressEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_mousePressEvent".}
proc fcQWizard_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_mouseReleaseEvent".}
proc fcQWizard_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_mouseDoubleClickEvent".}
proc fcQWizard_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_mouseMoveEvent".}
proc fcQWizard_virtualbase_wheelEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_wheelEvent".}
proc fcQWizard_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_keyReleaseEvent".}
proc fcQWizard_virtualbase_focusInEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_focusInEvent".}
proc fcQWizard_virtualbase_focusOutEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_focusOutEvent".}
proc fcQWizard_virtualbase_enterEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_enterEvent".}
proc fcQWizard_virtualbase_leaveEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_leaveEvent".}
proc fcQWizard_virtualbase_moveEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_moveEvent".}
proc fcQWizard_virtualbase_tabletEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_tabletEvent".}
proc fcQWizard_virtualbase_actionEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_actionEvent".}
proc fcQWizard_virtualbase_dragEnterEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_dragEnterEvent".}
proc fcQWizard_virtualbase_dragMoveEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_dragMoveEvent".}
proc fcQWizard_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_dragLeaveEvent".}
proc fcQWizard_virtualbase_dropEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_dropEvent".}
proc fcQWizard_virtualbase_hideEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_hideEvent".}
proc fcQWizard_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool {.importc: "QWizard_virtualbase_nativeEvent".}
proc fcQWizard_virtualbase_changeEvent(self: pointer, param1: pointer): void {.importc: "QWizard_virtualbase_changeEvent".}
proc fcQWizard_virtualbase_metric(self: pointer, param1: cint): cint {.importc: "QWizard_virtualbase_metric".}
proc fcQWizard_virtualbase_initPainter(self: pointer, painter: pointer): void {.importc: "QWizard_virtualbase_initPainter".}
proc fcQWizard_virtualbase_redirected(self: pointer, offset: pointer): pointer {.importc: "QWizard_virtualbase_redirected".}
proc fcQWizard_virtualbase_sharedPainter(self: pointer, ): pointer {.importc: "QWizard_virtualbase_sharedPainter".}
proc fcQWizard_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void {.importc: "QWizard_virtualbase_inputMethodEvent".}
proc fcQWizard_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer {.importc: "QWizard_virtualbase_inputMethodQuery".}
proc fcQWizard_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool {.importc: "QWizard_virtualbase_focusNextPrevChild".}
proc fcQWizard_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_timerEvent".}
proc fcQWizard_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_childEvent".}
proc fcQWizard_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QWizard_virtualbase_customEvent".}
proc fcQWizard_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QWizard_virtualbase_connectNotify".}
proc fcQWizard_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QWizard_virtualbase_disconnectNotify".}
proc fcQWizard_protectedbase_adjustPosition(self: pointer, param1: pointer): void {.importc: "QWizard_protectedbase_adjustPosition".}
proc fcQWizard_protectedbase_updateMicroFocus(self: pointer, ): void {.importc: "QWizard_protectedbase_updateMicroFocus".}
proc fcQWizard_protectedbase_create(self: pointer, ): void {.importc: "QWizard_protectedbase_create".}
proc fcQWizard_protectedbase_destroy(self: pointer, ): void {.importc: "QWizard_protectedbase_destroy".}
proc fcQWizard_protectedbase_focusNextChild(self: pointer, ): bool {.importc: "QWizard_protectedbase_focusNextChild".}
proc fcQWizard_protectedbase_focusPreviousChild(self: pointer, ): bool {.importc: "QWizard_protectedbase_focusPreviousChild".}
proc fcQWizard_protectedbase_sender(self: pointer, ): pointer {.importc: "QWizard_protectedbase_sender".}
proc fcQWizard_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QWizard_protectedbase_senderSignalIndex".}
proc fcQWizard_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QWizard_protectedbase_receivers".}
proc fcQWizard_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QWizard_protectedbase_isSignalConnected".}
proc fcQWizard_new(vtbl: pointer, parent: pointer): ptr cQWizard {.importc: "QWizard_new".}
proc fcQWizard_new2(vtbl: pointer, ): ptr cQWizard {.importc: "QWizard_new2".}
proc fcQWizard_new3(vtbl: pointer, parent: pointer, flags: cint): ptr cQWizard {.importc: "QWizard_new3".}
proc fcQWizard_staticMetaObject(): pointer {.importc: "QWizard_staticMetaObject".}
proc fcQWizardPage_metaObject(self: pointer, ): pointer {.importc: "QWizardPage_metaObject".}
proc fcQWizardPage_metacast(self: pointer, param1: cstring): pointer {.importc: "QWizardPage_metacast".}
proc fcQWizardPage_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWizardPage_metacall".}
proc fcQWizardPage_tr(s: cstring): struct_miqt_string {.importc: "QWizardPage_tr".}
proc fcQWizardPage_setTitle(self: pointer, title: struct_miqt_string): void {.importc: "QWizardPage_setTitle".}
proc fcQWizardPage_title(self: pointer, ): struct_miqt_string {.importc: "QWizardPage_title".}
proc fcQWizardPage_setSubTitle(self: pointer, subTitle: struct_miqt_string): void {.importc: "QWizardPage_setSubTitle".}
proc fcQWizardPage_subTitle(self: pointer, ): struct_miqt_string {.importc: "QWizardPage_subTitle".}
proc fcQWizardPage_setPixmap(self: pointer, which: cint, pixmap: pointer): void {.importc: "QWizardPage_setPixmap".}
proc fcQWizardPage_pixmap(self: pointer, which: cint): pointer {.importc: "QWizardPage_pixmap".}
proc fcQWizardPage_setFinalPage(self: pointer, finalPage: bool): void {.importc: "QWizardPage_setFinalPage".}
proc fcQWizardPage_isFinalPage(self: pointer, ): bool {.importc: "QWizardPage_isFinalPage".}
proc fcQWizardPage_setCommitPage(self: pointer, commitPage: bool): void {.importc: "QWizardPage_setCommitPage".}
proc fcQWizardPage_isCommitPage(self: pointer, ): bool {.importc: "QWizardPage_isCommitPage".}
proc fcQWizardPage_setButtonText(self: pointer, which: cint, text: struct_miqt_string): void {.importc: "QWizardPage_setButtonText".}
proc fcQWizardPage_buttonText(self: pointer, which: cint): struct_miqt_string {.importc: "QWizardPage_buttonText".}
proc fcQWizardPage_initializePage(self: pointer, ): void {.importc: "QWizardPage_initializePage".}
proc fcQWizardPage_cleanupPage(self: pointer, ): void {.importc: "QWizardPage_cleanupPage".}
proc fcQWizardPage_validatePage(self: pointer, ): bool {.importc: "QWizardPage_validatePage".}
proc fcQWizardPage_isComplete(self: pointer, ): bool {.importc: "QWizardPage_isComplete".}
proc fcQWizardPage_nextId(self: pointer, ): cint {.importc: "QWizardPage_nextId".}
proc fcQWizardPage_completeChanged(self: pointer, ): void {.importc: "QWizardPage_completeChanged".}
proc fcQWizardPage_connect_completeChanged(self: pointer, slot: int, callback: proc (slot: int) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QWizardPage_connect_completeChanged".}
proc fcQWizardPage_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWizardPage_tr2".}
proc fcQWizardPage_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWizardPage_tr3".}
type cQWizardPageVTable {.pure.} = object
  destructor*: proc(vtbl: ptr cQWizardPageVTable, self: ptr cQWizardPage) {.cdecl, raises:[], gcsafe.}
  metaObject*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  metacast*: proc(vtbl, self: pointer, param1: cstring): pointer {.cdecl, raises: [], gcsafe.}
  metacall*: proc(vtbl, self: pointer, param1: cint, param2: cint, param3: pointer): cint {.cdecl, raises: [], gcsafe.}
  initializePage*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  cleanupPage*: proc(vtbl, self: pointer, ): void {.cdecl, raises: [], gcsafe.}
  validatePage*: proc(vtbl, self: pointer, ): bool {.cdecl, raises: [], gcsafe.}
